5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_2711.log
== SUBMITION (2019-04-11 16:38:38) 
-- CODE:
#Leitura de valores:
rs = float(input("Qual o valor disponivel? "))
nru = int(input("quantidade de tickets do RU: "))
vru = float(input("Qual o valor dos tickets? "))
nbus = int(input("quantidade de passes: "))
vbus = float(input("Qual o valor dos passes? "))

#Verificação dos valores
calc = (nru*vru) + (nbus*vbus)
if (calc <= rs):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
	
	

-- EXECUTION TIME:
0.182642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 11, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:43) 
-- CODE:
#Leitura de valores:
rs = float(input("Qual o valor disponivel? "))
nru = int(input("quantidade de tickets do RU: "))
vru = float(input("Qual o valor dos tickets? "))
nbus = int(input("quantidade de passes: "))
vbus = float(input("Qual o valor dos passes? "))

#Verificação dos valores
calc = (nru*vru) + (nbus*vbus)
if (calc <= rs):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:54) 
-- CODE:
#Leitura de valores:
rs = float(input("Qual o valor disponivel? "))
nru = int(input("quantidade de tickets do RU: "))
vru = float(input("Qual o valor dos tickets? "))
nbus = int(input("quantidade de passes: "))
vbus = float(input("Qual o valor dos passes? "))

#Verificação dos valores
calc = (nru*vru) + (nbus*vbus)
if (calc <= rs):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
	

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:40:21) 
-- CODE:
#Leitura de valores:
rs = float(input("Qual o valor disponivel? "))
nru = int(input("quantidade de tickets do RU: "))
vru = float(input("Qual o valor dos tickets? "))
nbus = int(input("quantidade de passes: "))
vbus = float(input("Qual o valor dos passes? "))

#Verificação dos valores
calc = (nru*vru) + (nbus*vbus)
if (calc <= rs):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
	

-- EXECUTION TIME:
0.119332
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
